[project]
name = "pytune_helpers_messaging"
version = "0.1.0"
description = "Messaging helpers for PyTune (email via aiosmtplib, Celery/RabbitMQ utilities)"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "MIT"

authors = [
    { name = "Gabriel de Fombelle", email = "gabriel.de.fombelle@gmail.com" }
]

dependencies = [
    "aiosmtplib>=1.1.7",
    "celery>=5.5.0",
    "kombu>=5.5.0",

    # internes — résolus AUTOMATIQUEMENT via workspace root
    "pytune_configuration",
    "simple_logger",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "mypy>=1.11.1",
    "ruff>=0.6.8",
]

# ❌ AUCUN tool.uv.sources ici ! (sinon uv pète)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pytune_helpers_messaging"]